Sat Jul 13 22:58:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_shift3): New function.
	  big_lshift and big_rshift are merged.
	  (big_shift2): New function.
	  (big_lshift): Use big_shift3.
	  (big_rshift): Ditto.
	  (check_shiftdown): Removed.
	  (rb_big_lshift): Use big_shift2 and big_shift3.
	  (rb_big_rshift): Ditto.
	  (big_lshift): Removed.
	  (big_rshift): Ditto.

Sat Jul 13 15:51:38 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_lshift): Use size_t instead of long.
	  (bary_small_rshift): Ditto.

Sat Jul 13 15:33:33 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_lshift): Functions moved to remove
	  declaration.
	  (bary_small_rshift): Ditto.

Sat Jul 13 12:27:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_associate_index): fill new terminator length, not
	  old one.

Sat Jul 13 12:24:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32: move from ext/dl and ext/fiddle.  since ext/extmk.rb
	  builds extensions in alphabetical order, compiled?('fiddle') under
	  ext/dl makes no sense.

Sat Jul 13 09:26:09 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (biglsh_bang): Removed.
	  (bigrsh_bang): Ditto.
	  (bigmul1_toom3): Use bary_small_lshift and bary_small_rshift.

Sat Jul 13 01:04:43 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems/psych_additions.rb: Ignore Psych docs here

Fri Jul 12 18:10:46 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/fiddle/win32/lib/win32/registry.rb
	  (Win32::Registry::API#make_wstr): same as r41922.

Fri Jul 12 16:28:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (rb_enc_associate_index): refill the terminator if it
	  becomes longer than before.  [ruby-dev:47500] [Bug #8624]

	* string.c (str_null_char, str_fill_term): get rid of out of bound
	  access.

	* string.c (rb_str_fill_terminator): add a parameter for the length of
	  new terminator.

Fri Jul 12 11:26:25 2013  Masaki Matsushita  <glass.saga@gmail.com>
